<resources>
    <string name="app_name">Garras Puerto Serie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="TITULO">ST 455 ARAUCO FOREST</string>
    <string name="titulo_excel">Balanzas Hook Forestal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: dialogo datos de la carga -->
    <string name="dialogo_titulo">Ingrese los datos de la carga ...</string>
    <string name="dialgo_cliente">Cod. :</string>
    <string name="dialgo_volumen">Grua :</string>
    <string name="dialgo_producto">Producto :</string>
    <string name="dialgo_patente">Vehículo :</string>
    <string name="dialgo_codigo">Código :</string>
    <string name="dialgo_tara">Tara :</string>
    <string name="dialgo_aceptar">Aceptar</string>
    <string name="dialgo_cancelar">Salir</string>

    <!-- Todo: Dialogo Edicion Productos -->
    <string name="dialogo_productos_titulo">Edición de Productos</string>
    <string name="dialogo_productos_producto1">Prod. nº 1:</string>
    <string name="dialogo_productos_producto2">Prod. nº 2:</string>
    <string name="dialogo_productos_producto3">Prod. nº 3:</string>
    <string name="dialogo_productos_producto4">Prod. nº 4:</string>
    <string name="dialogo_productos_producto5">Prod. nº 5:</string>
    <string name="dialogo_productos_producto6">Prod. nº 6:</string>
    <string name="dialogo_productos_producto7">Prod. nº 7:</string>
    <string name="dialogo_productos_producto8">Prod. nº 8:</string>
    <string name="dialogo_productos_producto9">Prod. nº 9:</string>
    <string name="dialogo_productos_producto10">Prod. nº 10:</string>
    <string name="dialogo_productos_producto11">Prod. nº 11:</string>
    <string name="dialogo_productos_producto12">Prod. nº 12:</string>
    <string name="Tiempo_de_carga">Transcurrido :</string>
    <string name="datos_de_la_descarga">Datos de la carga</string>
    <string name="patente">Vehículo :</string>
    <string name="codigo">Codigo :</string>
    <string name="producto">Producto :</string>
    <string name="datos_cliente">Cod. :</string>
    <string name="datos_volumen">Grua :</string>
    <string name="datos_tara">Tara :</string>
    <string name="titulo_calibracion">Calibración de la balanza</string>
    <string name="calibracion_peso_maximo">Capacidad máxima :</string>
    <string name="calibracion_celdas">Total de Celdas :</string>
    <string name="calibracion_sensibilidad">Sensibilidad :</string>
    <string name="calibracion_division">División mínima :</string>
    <string name="calibracion_ventana">Ventana movil :</string>
    <string name="calibracion_kg_filtro">Kg de filtro :</string>
    <string name="calibracion_conversiones">Conversiones :</string>
    <string name="calibracion_recortes">Recortes :</string>
    <string name="calibracion_mensaje_recortes">Debe aumentar el valor de Conversiones</string>
    <string name="calibracion_mensaje_logica">Logica no puede ser mayor a 2</string>
    <string name="calibracion_mensaje_conversiones">El número de conversiones NO puede ser mayor a 90</string>
    <string name="calibracion_mensaje_campos_vacios">Debe completar todos los campos</string>


    <!-- Todo:     Mensajes en pantalla     -->

    <string name="mensaje_guardado_calibracion">La calibración se guardó correctamente</string>
    <string name="mensaje_guardado_calibracion_error">Error al guardar la calibración</string>
    <string name="dialogo_cliente">Cliente :</string>
    <string name="calibracion_logica">Lógica :</string>

    <string name="mensaje_tipo_celda">La conexión a sido exitosa</string>
    <string name="mensaje__tipo_celda_error">Error al conectar celda</string>
    <string name="mensaje__tipo_celda_fail">La balanza contestó FAIL</string>
    <!-- todo:       Dialogo de menu        -->
    <string name="menu_calibracion">Calibración</string>
    <string name="menu_tipo_celda">Tipo de celda</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_Pesadas">Pesadas</string>
    <string name="menu_exportar">Exportar Excel</string>
    <string name="menu_cabecera">Cabecera de impresión</string>
    <string name="menu_correccion">Corrección</string>
    <string name="menu_operadores">Operadores</string>
    <string name="menu_actualizar">Actualizar</string>

    <string name="menu_titulo">Seleccione una opción ...</string>
    <string name="tiitulo_dialogo_guardar_pesada">Desea guardar la pesada ...</string>
    <string name="titulo_dialogo_tipo_celda">Seleccione el tipo de celda ...</string>
    <string name="tipo_de_celda">Tipo de celda :</string>

    <string name="tipo_celda_1">Cableada</string>
    <string name="tipo_celda_2">Inalámbrica XBee</string>
    <string name="tipo_celda_3">Inalámbrica Hook</string>

    <string name="tipo_equipo_1">Chasis y acoplado</string>
    <string name="tipo_equipo_2">Bitren</string>
    <string name="tipo_equipo_3">Tritren</string>


    <string name="tipo_celda_numero_celda">Nº de celda :</string>
    <string name="tipo_celda_ssd">SSD :</string>
    <string name="tipo_celda_pass">Pass :</string>
    <string name="tipo_celda_puerto">Puerto :</string>
    <string name="tipo_celda_mensaje">Faltan datos para calibrar la celda</string>
    <string name="dialogo_cabecera_titulo">Introduzca la cabecera para el ticket</string>
    <string name="pesadas_fecha">Fecha</string>
    <string name="excel_fecha">FECHA</string>
    <string name="pesadas_hora">Hora</string>
    <string name="pesadas_producto">Producto</string>
    <string name="pesadas_cargio">Cargio</string>
    <string name="pesadas_petente">Patente</string>
    <string name="pesadas_volumen">Volumen</string>
    <string name="pesadas_codigo">Código</string>
    <string name="pesadas_cliente">Cliente</string>
    <string name="pesadas_bruto">Bruto</string>
    <string name="pesadas_tara">Tara</string>
    <string name="pesadas_neto">Neto</string>
    <string name="pesadas_desde">Desde :</string>
    <string name="pesadas_hasta">Hasta :</string>
    <string name="pesadas_total">Total :</string>
    <string name="correccion">Corrección :</string>
    <string name="correccion_titulo">Introduzca la corrección</string>
    <string name="calibracion_ticket">Tickets impresión :</string>
    <string name="calibracion_semiautomatico">Semiautomático</string>
    <string name="chasis">Chasis</string>
    <string name="acoplado">Acoplado</string>
    <string name="total">Total :</string>
    <string name="grua">Grua</string>
    <string name="carro">Carro :</string>
    <string name="principal_chasis">Chasis :</string>
    <string name="carro2">Carro 2 :</string>
    <string name="bancos_de_carga">BANCOS DE CARGA</string>
    <string name="tara_vacia">No se pueden dejar campos vacios</string>
    <string name="bancos">Bancos :</string>
    <string name="a_cargar">Total a Cargar :</string>
    <string name="accion_borrado_impresion">Seleccione la acción a realizar, con la pesada que se ha marcado.</string>
    <string name="titulo_borrado_reimpresion">Borrado y reimpresión</string>
    <string name="boton_borrar">Borrar Pesada</string>
    <string name="boton_borrar_todas">Borrar Todas</string>
    <string name="titulo_dialogo_operador">Seleccione operador</string>

    <string name="mensaje_exportacion">El archivo se exportó correctamente</string>
    <string name="mensaje_exportacion_error">No se pudo exportar el archivo</string>

    <string name="mensaje_operador_guardado_error">No se pudo guardar el operador</string>
    <string name="mensaje_operador_guardado">El operador se guardo correctamente</string>
    <string name="pesadas_vhiculo">Vehiculo</string>
    <string name="pesadas_cod">Cod.</string>
    <string name="titulo_borrar_operadores">Borrar operadores</string>
    <string name="texto_borrar_operadores">Seleccione la acción a realizar</string>
    <string name="boton_borrar_operadores">Borrar Selección</string>
    <string name="title_activity_lista_operadores">Lista Operadores</string>
    <string name="titulo_dialogo_contraseña">Introduzca la contraseña</string>
    <string name="texto_dialogo_contraseña">Contraseña :</string>


    <string name="titulo_dialogo_entrfechas">Seleccione las Fechas</string>
    <string name="texto1_dialogo_entrfechas">Fecha inicio</string>
    <string name="texto2_dialogo_entrfechas">Fecha final</string>

    <string name="titulo_dialogo_nuevo_operador">Ingrese Nuevo Operador</string>
    <string name="nombre_dialogo_nuevo_operador">Nombre :</string>
    <string name="codigo_dialogo_nuevo_operador">Codigo :</string>
    <string name="neto">Neto :</string>

    <string name="excel_producto">PRODUCTO</string>
    <string name="nuevo">NUEVO</string>

    <string name="linea1">Linea 1 :</string>
    <string name="linea2">Linea 2 :</string>
    <string name="linea3">Linea 3 :</string>
    <string name="linea4">Linea 4 :</string>

    <string name="titulo_usb">Guardado USB</string>
    <string name="mensaje_usb">Desea guardar las pesadas en la memoria inerna?</string>

    <string name="toast1_usb">El USB no está montado en la caja</string>
    <string name="toast2_usb">  LA BALANZA ESTA DESCONECTADA  </string>
    <string name="toast3_usb">Desea guardar las pesadas en la memoria inerna?</string>


    <string name="toast_operadpres">Se deben completar todos los campos</string>


</resources>
